2025-12 Cumulative Update for Version 2512 (6.1.0)

--- a/bat/abs.html
+++ b/bat/abs.html
@@ -371,7 +371,7 @@
 
                 listGroup.innerHTML = '';
                 if (busStops.length === 0) {
-                    listGroup.innerHTML = '<p style="text-align:center;">No bus stops found.</p>';
+                    listGroup.innerHTML = '<p class="pin-msg"><i class="fa-solid fa-circle-info"></i>No bus stops found.</p>';
                     prevButton.style.display = 'none';
                     nextButton.style.display = 'none';
                     return;
