--- a/bat/settings.html
+++ b/bat/settings.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="google-site-verification" content="57TuruPNu5wqSSia_cUehl5t9Gh1AbxrHNPcMiFx-aQ" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Search Bus Stop | Buszy</title>
+    <title>Nearby Bus Stops | Buszy</title>
     <meta content="" name="description">
     <meta content="" name="keywords">
     <meta property="og:image" content="https://i.imgur.com/i8n9KYs.png" />
@@ -193,15 +193,8 @@
                             <div
                                 style="display: flex; justify-content: space-between; align-items: center; flex-wrap: wrap;">
                                 <div>
-                                    <h1 class="page-title" id="filter-title">Arrival Timings</h1>
+                                    <h1 class="page-title" id="filter-title">Nearby Bus Stops</h1>
                                 </div>
-                                <div style="position: relative; max-width: 400px; margin-top: 5px; display: none;">
-                                    <i class="fa-solid fa-search"
-                                        style="position: absolute; left: 12px; top: 50%; transform: translateY(-50%); color: #cccccc; z-index: 1;"></i>
-                                    <input type="text" id="bus-stop-search" class="form-control"
-                                        placeholder=" Search Bus Stop Code" style="padding-left: 35px; width: 100%;">
-                                </div>
-
                             </div>
                         </div>
                     </div>
@@ -224,7 +217,7 @@
                         </li>
 
                         <li>
-                            <a href="nbs.html"><i class="fa-solid fa-location-dot"></i> Nearby</a>
+                            <a href="#" class="active"><i class="fa-solid fa-location-dot"></i> Nearby</a>
                         </li>
 
                         <li>
@@ -252,36 +245,12 @@
         </div>
 
     </section>
-
     <!-- Section Contents -->
     <section class="about-me-summ clearfix" style="padding-bottom: 5em;">
+
         <div class="container">
-            <div class="fleet-legend">
-                <span><img src="assets/dd.png" alt="BD Icon" class="fleet-icon"> Double</span>
-                <span><img src="assets/bd.png" alt="SMRT Icon" class="fleet-icon"> Bendy</span>
-                <span><img src="assets/sd.png" alt="Other Icon" class="fleet-icon"> Single</span>
-            </div>
-
-            <table class="table">
-                <thead>
-                    <tr>
-                        <th scope="col" class="svc-spacing">Services</th>
-                        <th scope="col" class="departure-spacing">Arrival Times</th>
-                        <th class="operator-column" scope="col">Operator</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr class="message">
-                        <td colspan="3">
-                            <p
-                                style="text-align:center; display: flex; align-items: center; justify-content: center; gap: 10px;">
-                                <span class="spinner"></span> Loading Data...
-                            </p>
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
-
+            <h2 class="text-center" style="padding-top: 1em;">Bus Stops</h2>
+            <div id="bus-stops"></div>
         </div>
     </section>
 
@@ -334,156 +303,152 @@
 
     <script src="../js/utils.js"></script>
 
-
     <script>
+        const apiUrl = 'https://bat-lta-9eb7bbf231a2.herokuapp.com/nearby-bus-stops'; // Update with your server URL
+
+        // Automatically fetch nearby bus stops on page load
         document.addEventListener('DOMContentLoaded', () => {
-            const searchInput = document.getElementById('bus-stop-search'); // Search input field
-            const tableBody = document.querySelector('table tbody'); // Table body
+            const busStopsContainer = document.getElementById('bus-stops');
 
-            // Get the BusStopCode from the URL
-            const urlParams = new URLSearchParams(window.location.search);
-            const busStopCode = urlParams.get('BusStopCode');
+            // Display "Searching for nearby bus stops..." message
+            busStopsContainer.innerHTML = '<p class="pin-msg"><span class="spinner"></span>Searching for nearby bus stops...</p>';
 
-            if (busStopCode) {
-                searchInput.value = busStopCode;
-                fetchBusArrivals();
-            } else {
-                const savedSearch = sessionStorage.getItem('busStopSearch');
-                if (savedSearch) {
-                    searchInput.value = savedSearch;
-                    fetchBusArrivals();
-                } else {
-                    tableBody.innerHTML = '<tr class="message"><td colspan="3">Enter Bus Stop Code on the Search Box.</td></tr>';
-                }
+            // Check if geolocation is available
+            if (!navigator.geolocation) {
+                alert('Geolocation is not supported by your browser.');
+                busStopsContainer.innerHTML = '<p class="pin-msg"><i class="fa-solid fa-triangle-exclamation"></i>Geolocation is not supported by your browser.</p>';
+                return;
             }
 
-            const updateUrl = () => {
-                const url = new URL(window.location.href);
-                const currentValue = searchInput.value.trim();
+            // Get the user's current location
+            navigator.geolocation.getCurrentPosition(async (position) => {
+                const latitude = position.coords.latitude;
+                const longitude = position.coords.longitude;
 
-                if (currentValue) {
-                    url.searchParams.set('busStopCode', currentValue);
-                } else {
-                    url.searchParams.delete('busStopCode');
+                try {
+                    // Fetch nearby bus stops from the backend
+                    const response = await fetch(`${apiUrl}?latitude=${latitude}&longitude=${longitude}&radius=2`);
+                    if (!response.ok) {
+                        throw new Error('Failed to fetch nearby bus stops');
+                    }
+
+                    const busStops = await response.json();
+                    displayBusStops(busStops);
+                } catch (error) {
+                    console.error('Error:', error);
+                    busStopsContainer.innerHTML = '<p class="pin-msg"><i class="fa-solid fa-triangle-exclamation"></i>Failed to fetch nearby bus stops. Please try again later.</p>';
                 }
-
-                window.history.replaceState({}, document.title, url.toString());
-            };
-
-            searchInput.addEventListener('input', debounce(() => {
-                updateUrl();
-                fetchBusArrivals();
-            }, 300));
-
-            // Refresh data every 5 seconds
-            setInterval(fetchBusArrivals, 5000);
+            }, (error) => {
+                console.error('Geolocation error:', error);
+                busStopsContainer.innerHTML = '<p class="pin-msg"><i class="fa-solid fa-triangle-exclamation"></i>Unable to retrieve your location.</p>';
+            });
         });
 
-        function debounce(func, delay) {
-            let timeout;
-            return function (...args) {
-                clearTimeout(timeout);
-                timeout = setTimeout(() => func.apply(this, args), delay);
-            };
+        document.addEventListener('DOMContentLoaded', () => {
+            const cachedLocation = sessionStorage.getItem('userLocation');
+            const busStopsContainer = document.getElementById('bus-stops');
+
+            if (cachedLocation) {
+                const { latitude, longitude } = JSON.parse(cachedLocation);
+                fetchNearbyBusStops(latitude, longitude);
+            } else {
+                // Get the user's current location
+                navigator.geolocation.getCurrentPosition((position) => {
+                    const latitude = position.coords.latitude;
+                    const longitude = position.coords.longitude;
+
+                    // Cache the location
+                    sessionStorage.setItem('userLocation', JSON.stringify({ latitude, longitude }));
+
+                    fetchNearbyBusStops(latitude, longitude);
+                }, (error) => {
+                    console.error('Geolocation error:', error);
+                    busStopsContainer.innerHTML = '<p class="pin-msg"><i class="fa-solid fa-triangle-exclamation"></i>Unable to retrieve your location.</p>';
+                }, {
+                    enableHighAccuracy: true,
+                    timeout: 10000,
+                    maximumAge: 0
+                });
+            }
+        });
+
+        async function fetchNearbyBusStops(latitude, longitude) {
+            try {
+                const response = await fetch(`${apiUrl}?latitude=${latitude}&longitude=${longitude}&radius=2`);
+                if (!response.ok) {
+                    throw new Error('Failed to fetch nearby bus stops');
+                }
+
+                const busStops = await response.json();
+                displayBusStops(busStops);
+            } catch (error) {
+                console.error('Error:', error);
+                busStopsContainer.innerHTML = '<p class="pin-msg"<i class="fa-solid fa-triangle-exclamation"></i>Failed to fetch nearby bus stops. Please try again later.</p>';
+            }
         }
 
-        // Updated fetchBusArrivals function
-        async function fetchBusArrivals() {
-            try {
-                const searchInput = document.getElementById('bus-stop-search').value.trim();
-                const tableBody = document.querySelector('table tbody');
+        // Display the 3 nearest bus stops
+        function displayBusStops(busStops) {
+            const busStopsContainer = document.getElementById('bus-stops');
+            busStopsContainer.innerHTML = ''; // Clear previous results
 
-                if (!searchInput) {
-                    tableBody.innerHTML = '<tr class="message"><td colspan="3">Enter Bus Stop Code on the Search Box.</td></tr>';
-                    return;
-                }
+            if (!busStops || busStops.length === 0) {
+                busStopsContainer.innerHTML = '<p class="pin-msg"><i class="fa-solid fa-circle-info"></i>No Bus Stops found nearby.</p>';
+                return;
+            }
 
-                const url = new URL('https://bat-lta-9eb7bbf231a2.herokuapp.com/bus-arrivals');
-                url.searchParams.append('BusStopCode', searchInput);
+            busStops.forEach((busStop) => {
+                const distance = busStop.distance < 1
+                    ? `${(busStop.distance * 1000).toFixed(0)} m` // Convert to meters if less than 1 km
+                    : `${busStop.distance.toFixed(2)} km`; // Show in kilometers otherwise
 
-                const response = await fetch(url);
+                const busStopElement = document.createElement('div');
+                busStopElement.className = 'bus-stop';
+                busStopElement.innerHTML = `
+            <p class="bs-name"><span>${busStop.Description}</span> </p>
+            <p class="bs-info">
+                <span style="font-weight:bold;">${busStop.BusStopCode}</span> | 
+                <span>${busStop.RoadName}</span> | 
+                <span>${distance}</span>
+            </p>
+        `;
 
-                if (!response.ok) {
-                    throw new Error('Failed to fetch bus arrivals');
-                }
-
-                const data = await response.json();
-                console.log('API Response:', data);
-
-                tableBody.innerHTML = '';
-
-                if (!data.Services || data.Services.length === 0) {
-                    tableBody.innerHTML = '<tr><td colspan="3">No data available</td></tr>';
-                    return;
-                }
-
-                const now = new Date();
-
-                data.Services.forEach((service) => {
-                    const row = document.createElement('tr');
-                    row.innerHTML = `
-                <td class="svcNumtd">
-                    <p class="svcNum">${service.ServiceNo}</p>
-                </td>
-                <td class="departure-spacing">
-                    <span class="bus-time">
-                        ${service.NextBus.EstimatedArrival ? formatArrivalTimeOrArr(service.NextBus.EstimatedArrival, now) : '-'} 
-                        &nbsp; 
-                        ${service.NextBus.Type ? `<img src="assets/${service.NextBus.Type.toLowerCase()}.png" alt="${service.NextBus.Type}" style="width: 30px; height: auto;">` : ''}
-                    </span>
-                    <span class="bus-time">
-                        ${service.NextBus2.EstimatedArrival ? formatArrivalTimeOrArr(service.NextBus2.EstimatedArrival, now) : ''} 
-                        &nbsp; 
-                        ${service.NextBus2.Type ? `<img src="assets/${service.NextBus2.Type.toLowerCase()}.png" alt="${service.NextBus2.Type}" style="width: 30px; height: auto;">` : ''}
-                    </span>
-                </td>
-                <td> 
-                    ${service.Operator ? `<img src="assets/${service.Operator.toLowerCase()}.png" alt="${service.Operator}" class="operator-logo">` : ''}
-                </td>
-            `;
-                    tableBody.appendChild(row);
+                // Add click event listener to the entire div
+                busStopElement.addEventListener('click', () => {
+                    // Navigate to buszy.html with the BusStopCode as a query parameter
+                    window.location.href = `art.html?BusStopCode=${encodeURIComponent(busStop.BusStopCode)}`;
                 });
 
-            } catch (error) {
-                console.error('Error fetching bus arrivals:', error);
-                const tableBody = document.querySelector('table tbody');
-                tableBody.innerHTML = '<tr><td colspan="3"><p style = "text-align:center; display: flex; align-items: center; justify-content: center; gap: 10px;" Error loading data</td></tr>';
-            }
-        }
+                busStopsContainer.appendChild(busStopElement);
+            });
 
-        // Function to format ISO string to hh:mm or show "Arrive" or greyed-out time
-        function formatArrivalTimeOrArr(isoString, now) {
-            const arrivalTime = new Date(isoString);
-
-            const timeDifference = arrivalTime - now;
-
-            if (timeDifference === 0) {
-                // Show "Arr" if the time difference is exactly 0
-                return `<span class="arrival-now">Arr</span>`;
-            } else if (timeDifference < 0) {
-                // Continue showing "Arr" if the time difference is -1 or more
-                return `<span class="arrival-now">Arr</span>`;
-            }
-
-            // Format the time as hh:mm for future arrivals
-            const hours = arrivalTime.getHours().toString().padStart(2, '0');
-            const minutes = arrivalTime.getMinutes().toString().padStart(2, '0');
-            return `${hours}:${minutes}`;
         }
 
         document.addEventListener('DOMContentLoaded', () => {
-            const searchBusStopButton = document.getElementById('search-bus-stop-button'); // Select the "Search Bus Stop" button
+            const searchBusStopButton = document.querySelector('a[href="buszy.html"]'); // Select the "Search Bus Stop" button
             const searchInput = document.getElementById('bus-stop-search'); // Select the search input field
 
             if (searchBusStopButton && searchInput) {
                 searchBusStopButton.addEventListener('click', () => {
-                    searchInput.value = ''; // Clear the search input field
-                    sessionStorage.removeItem('busStopSearch'); // Clear the session storage value
+                    searchInput.value = ''; // Clear the search bar
                 });
             }
         });
-    </script>
 
+        // Populate the search bar with the BusStopCode from query parameters
+        document.addEventListener('DOMContentLoaded', () => {
+            const urlParams = new URLSearchParams(window.location.search);
+            const busStopCode = urlParams.get('BusStopCode'); // Get the BusStopCode from the query parameters
+
+            if (busStopCode) {
+                const searchInput = document.getElementById('bus-stop-search'); // Select the search bar
+                if (searchInput) {
+                    searchInput.value = busStopCode; // Populate the search bar with the BusStopCode
+                }
+            }
+        });
+
+    </script>
 </body>
 
 </html>
