--- a/buszy.html
+++ b/buszy.html
@@ -68,11 +68,9 @@
 
         .card-container {
             display: grid;
-            grid-template-columns: repeat(1, 1fr);
+            grid-template-columns: 50% 50%;
             gap: 20px;
             margin-bottom: 4em;
-            padding-left: 3em;
-            padding-right: 3em;
         }
 
         .card-bz {
@@ -82,6 +80,10 @@
         .card-bz p {
             font-size: 20px;
         }
+
+            .btn {
+        width: 80px;
+    }
     }
 
     .footer {
@@ -236,7 +238,11 @@
                     <p>Announcements</p>
                     <a href="bat/ann.html" class="btn bz-btn btn-2 mt-15"><i class="fa-solid fa-arrow-right"></i></a>
                 </div>
-
+                <div class="card-bz card-ann">
+                    <img src="bat/assets/ann.png" alt="ann" class="card-icon" />
+                    <p>Settings</p>
+                    <a href="bat/ann.html" class="btn bz-btn btn-2 mt-15"><i class="fa-solid fa-arrow-right"></i></a>
+                </div>
             </div>
         </div>
     </section>
@@ -370,7 +376,7 @@
                 if (hours >= 5 && hours < 12) {
                     return 'Good Morning!';
                 } else if (hours >= 12 && hours < 18) {
-                    return 'Good Afternoon!!';
+                    return 'Good Afternoon!';
                 } else {
                     return 'Good Evening!';
                 }
