--- a/buszy.html
+++ b/buszy.html
@@ -71,6 +71,8 @@
             grid-template-columns: 50% 50%;
             gap: 20px;
             margin-bottom: 4em;
+            padding-left: 0em;
+
         }
 
         .card-bz {
@@ -78,12 +80,15 @@
         }
 
         .card-bz p {
-            font-size: 20px;
+            font-size: 16px;
         }
 
-            .btn {
-        width: 80px;
-    }
+        .bz-btn {
+            margin-left: 0em;
+            margin-right: 0em;
+            width: 100px;
+        }
+
     }
 
     .footer {
