--- a/bat/abs.html
+++ b/bat/abs.html
@@ -230,11 +230,15 @@
                             <a href="#" class="active"><i class="fa-solid fa-magnifying-glass"></i>
                                 Search</a>
                         </li>
-
                         
                         <li>
                             <a href="ann.html"><i class="fa-solid fa-bullhorn"></i>
                                 Announcements</a>
+                        </li>
+
+                                                <li>
+                            <a href="settings.html"><i class="fa-solid fa-gear"></i>
+                                Settings</a>
                         </li>
                     </ul>
 
@@ -259,7 +263,7 @@
         <div class="container">
             <h2 class="text-center" style="padding-top: 1em;">Bus Stops</h2>
             <div class="list-group">
-                <p style="text-align:center; display: flex; align-items: center; justify-content: center; gap: 10px;">
+                <p class="pin-msg">
                     <span class="spinner"></span>Fetching Bus Stops list for the first time...
                 </p>
             </div>
