--- a/bat/nbs.html
+++ b/bat/nbs.html
@@ -229,6 +229,11 @@
                             <a href="ann.html"><i class="fa-solid fa-bullhorn"></i>
                                 Announcements</a>
                         </li>
+
+                        <li>
+                            <a href="settings.html"><i class="fa-solid fa-gear"></i>
+                                Settings</a>
+                        </li>
                     </ul>
 
                     <div class="right-arrow active">
