--- a/buszy.html
+++ b/buszy.html
@@ -246,7 +246,7 @@
                 <div class="card-bz card-ann">
                     <img src="bat/assets/ann.png" alt="ann" class="card-icon" />
                     <p>Settings</p>
-                    <a href="bat/ann.html" class="btn bz-btn btn-2 mt-15"><i class="fa-solid fa-arrow-right"></i></a>
+                    <a href="bat/settings.html" class="btn bz-btn btn-2 mt-15"><i class="fa-solid fa-arrow-right"></i></a>
                 </div>
             </div>
         </div>
@@ -254,7 +254,7 @@
 
     <section class="pinned" id="pinned">
         <div class="container">
-            <h2><i class="fa-solid fa-location-pin"></i>&nbsp; Pinned Bus Stops</h2>
+            <h2><i class="fa-solid fa-location-pin"></i>&nbsp;Pinned Bus Stops</h2>
             <!-- Section Contents -->
             <section class="about-me-summ clearfix" style="padding-bottom: 5em;">
                 <div id="bookmarks-container" class="list-group"></div>
